--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,26 +14,13 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>120</y>
-      <width>91</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>10</y>
-      <width>91</width>
-      <height>21</height>
+      <x>251</x>
+      <y>11</y>
+      <width>89</width>
+      <height>23</height>
      </rect>
     </property>
    </widget>
@@ -41,20 +28,55 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
-      <width>241</width>
-      <height>241</height>
+      <y>10</y>
+      <width>251</width>
+      <height>231</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
-    <widget class="QTextEdit" name="textEdit"/>
     <widget class="QTextBrowser" name="textBrowser"/>
+    <widget class="QTextEdit" name="textEdit"/>
    </widget>
-   <zorder>pushButton</zorder>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>41</y>
+      <width>91</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QPushButton" name="RefreshButton">
+       <property name="text">
+        <string>刷新列表</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="OpenButton">
+       <property name="text">
+        <string>打开端口</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="SendButton">
+       <property name="text">
+        <string>发送</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <zorder>OpenButton</zorder>
    <zorder>splitter</zorder>
    <zorder>comboBox</zorder>
+   <zorder>RefreshButton</zorder>
+   <zorder>SendButton</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
