--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,77 +6,243 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>347</width>
-    <height>248</height>
+    <width>685</width>
+    <height>376</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QWidget" name="layoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>251</x>
-      <y>11</y>
-      <width>89</width>
-      <height>23</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QSplitter" name="splitter">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
+      <x>520</x>
       <y>10</y>
-      <width>251</width>
-      <height>231</height>
+      <width>158</width>
+      <height>359</height>
      </rect>
     </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-    <widget class="QTextBrowser" name="textBrowser"/>
-    <widget class="QTextEdit" name="textEdit"/>
-   </widget>
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>41</y>
-      <width>91</width>
-      <height>101</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QPushButton" name="RefreshButton">
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="7" column="1">
+      <widget class="QLineEdit" name="KpLineEdit"/>
+     </item>
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_15">
        <property name="text">
-        <string>刷新列表</string>
+        <string>Ki</string>
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QPushButton" name="OpenButton">
+     <item row="9" column="0">
+      <widget class="QLabel" name="label_16">
        <property name="text">
-        <string>打开端口</string>
+        <string>Kd</string>
        </property>
       </widget>
      </item>
-     <item>
+     <item row="8" column="1">
+      <widget class="QLineEdit" name="KiLineEdit"/>
+     </item>
+     <item row="3" column="1">
+      <widget class="QComboBox" name="StopBitsComboBox">
+       <property name="currentIndex">
+        <number>0</number>
+       </property>
+       <item>
+        <property name="text">
+         <string>1</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>1.5</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>2</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="10" column="1">
       <widget class="QPushButton" name="SendButton">
        <property name="text">
         <string>发送</string>
        </property>
       </widget>
      </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_14">
+       <property name="text">
+        <string>Kp</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="RefreshButton">
+       <property name="text">
+        <string>刷新列表</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QComboBox" name="WordLengthComboBox">
+       <property name="currentIndex">
+        <number>3</number>
+       </property>
+       <item>
+        <property name="text">
+         <string>5</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>6</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>7</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>8</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QComboBox" name="SerialNameComboBox"/>
+     </item>
+     <item row="2" column="1">
+      <widget class="QComboBox" name="BaudRatComboBox">
+       <property name="currentIndex">
+        <number>7</number>
+       </property>
+       <item>
+        <property name="text">
+         <string>1200</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>2400</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>4800</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>9600</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>19200</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>38400</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>57600</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>115200</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_12">
+       <property name="text">
+        <string>数据位</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_11">
+       <property name="text">
+        <string>停止位</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="1">
+      <widget class="QLineEdit" name="KdLineEdit"/>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_13">
+       <property name="text">
+        <string>奇偶校验</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>串口选择</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QComboBox" name="ParityComboBox">
+       <property name="currentIndex">
+        <number>0</number>
+       </property>
+       <item>
+        <property name="text">
+         <string>无</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>奇校验</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>偶校验</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QPushButton" name="OpenButton">
+       <property name="text">
+        <string>打开端口</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>波特率</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
-   <zorder>OpenButton</zorder>
-   <zorder>splitter</zorder>
-   <zorder>comboBox</zorder>
-   <zorder>RefreshButton</zorder>
-   <zorder>SendButton</zorder>
+   <widget class="QWidget" name="Graph" native="true">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>500</width>
+      <height>360</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
