--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,8 +10,24 @@
     <height>376</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>685</width>
+    <height>376</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>685</width>
+    <height>376</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>PIDTester</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="icon.qrc">
+    <normaloff>:/icon/control.ico</normaloff>:/icon/control.ico</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QWidget" name="layoutWidget_2">
@@ -69,7 +85,7 @@
      <item row="10" column="1">
       <widget class="QPushButton" name="SendButton">
        <property name="text">
-        <string>发送</string>
+        <string>开始测试</string>
        </property>
       </widget>
      </item>
@@ -233,7 +249,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="Graph" native="true">
+   <widget class="MyWidget" name="Graph" native="true">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -242,10 +258,32 @@
       <height>360</height>
      </rect>
     </property>
+    <property name="minimumSize">
+     <size>
+      <width>500</width>
+      <height>360</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>500</width>
+      <height>360</height>
+     </size>
+    </property>
    </widget>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <customwidgets>
+  <customwidget>
+   <class>MyWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">mywidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
+ <resources>
+  <include location="icon.qrc"/>
+ </resources>
  <connections/>
 </ui>
